--- a/index.html
+++ b/index.html
@@ -1,13 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nazz</title>
-</head>
-<body>
-    <h1>Website coming very soon</h1>
-    <a href="http://yash.codes">Developed by Yash Kolambekar</a>
-</body>
+    <link rel="stylesheet" href="assets/fonts/stylesheet.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-425.css" />
+  </head>
+  <body>
+    <!-- <header>
+        <p id="header-title">
+           Nazz Fucking Best
+        </p>
+    </header> -->
+    <div id="div-1">
+      <div id="yt-head">
+        <p id="yt-head-1">NEW</p>
+      </div>
+      <div id="youtube-wrap">
+        <div id="thumbnail-div">
+          <img
+            id="yt-thumb"
+            src="assets/images/majborriyathumb.jpg"
+            alt="Youtube Thumbnail"
+          />
+        </div>
+        <div id="yt-details-div">
+          <p id="yt-title">Nazz - Majbooriya (Prod. Outfly)</p>
+          <p id="yt-description">Majbooriya by Nazz is a new school emotional hiphop track which talks about the side of life he has missed while pursuing his musical journey</p>
+          <div id="yt-bt-div">
+            <p>Open in Youtube 🔗</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="div-2">
+        <div id="tweet-wrap">
+            <img id="d2-t-icon" src="assets/images/twitter.png" alt="" srcset="">
+            <p id="tweet-text">
+                Maine mere ek bhai ko pucha "Bro ye social media pe sablog itne khush kyu hai? <br/>Toh usne bola "Kyuki asli life mein sabke l@ude lage pade hai, par kisi ko dikhana nahi hai"
+            </p>
+            <a href="https://twitter.com/nazzfuckingbest"><p id="twt-name">@nazzfuckingbest</p></a>
+        </div>
+        <div id="social-wrap">
+            <p>Connect with Nazz</p>
+            <div>
+                <div class="soc-button"><p>Stream on Spotify 📣</p></div>
+                <div class="soc-button"><p>Latest clicks on Instagram 📷</p></div>
+                <div class="soc-button"><p>Thoughts on Twitter 🐤</p></div>
+                <div class="soc-button"><p>Send some Snaps 👻</p></div>
+                <div class="soc-button"><p>Connect on Facebook 🙋‍♂️</p></div>
+            </div>
+        </div>
+    </div>
+  </body>
+  <script src="script.js"></script>
 </html>
