--- a/index.html
+++ b/index.html
@@ -37,13 +37,34 @@
       </div>
     </div>
     <div id="div-2">
-        <div id="tweet-wrap">
-            <img id="d2-t-icon" src="assets/images/twitter.png" alt="" srcset="">
-            <p id="tweet-text">
-                Maine mere ek bhai ko pucha "Bro ye social media pe sablog itne khush kyu hai? <br/>Toh usne bola "Kyuki asli life mein sabke l@ude lage pade hai, par kisi ko dikhana nahi hai"
+      <div>
+        <div id="bio-wrap">
+          <div id="bio-img-div">
+            <img id="bio-img" src="assets/images/nazzwithcarcropped.png" alt="" srcset="">
+            <div id="bio-text-div">
+            <p id="bio-img-text">Nazz's life</p>
+          </div>
+          </div>
+          <div id="bio-info">
+            <p id="bio-text-1">
+              Nihar Hodawadekar (born 23 July 1999) also widely known as Nazz is an Indian rapper from the suburbs of Mumbai, Maharashtra called Virar. Nazz started his career in music as a playback singer but with time he discovered Rap and Hip-hop culture and switched to Rap. He is active in the Underground Hip-hop since 2018, he blew up in the mainstream after he participated in the Indian national rap show MTV Hustle 2.0. He creates is music across various sub-genres of Hihop and is a prominent veteran of Mumbai Underground Hip-hop scene.
             </p>
-            <a href="https://twitter.com/nazzfuckingbest"><p id="twt-name">@nazzfuckingbest</p></a>
+          </div>
+          <div id="read-more-div">
+            <p id="read-more">Read more</p>
+          </div>
         </div>
+      </div>
+
+      <div>
+        <div id="tweet-wrap">
+          <img id="d2-t-icon" src="assets/images/twitter.png" alt="" srcset="">
+          <p id="tweet-text">
+              Maine mere ek bhai ko pucha "Bro ye social media pe sablog itne khush kyu hai? <br/>Toh usne bola "Kyuki asli life mein sabke l@ude lage pade hai, par kisi ko dikhana nahi hai"
+          </p>
+          <a href="https://twitter.com/nazzfuckingbest"><p id="twt-name">@nazzfuckingbest</p></a>
+      </div>
+
         <div id="social-wrap">
             <p>Connect with Nazz</p>
             <div>
@@ -54,6 +75,7 @@
                 <div class="soc-button"><p>Connect on Facebook 🙋‍♂️</p></div>
             </div>
         </div>
+      </div>
     </div>
   </body>
   <script src="script.js"></script>
