--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         </div>
         <div id="yt-details-div">
           <p id="yt-title">Nazz - Majbooriya (Prod. Outfly)</p>
-          <p id="yt-description">Majbooriya by Nazz is a new school emotional hiphop track which talks about the side of life he has missed while pursuing his musical journey</p>
+          <p id="yt-description">
+            Majbooriya by Nazz is a new school emotional hiphop track which
+            talks about the side of life he has missed while pursuing his
+            musical journey
+          </p>
           <div id="yt-bt-div">
             <p>Open in Youtube 🔗</p>
           </div>
@@ -40,14 +44,27 @@
       <div>
         <div id="bio-wrap">
           <div id="bio-img-div">
-            <img id="bio-img" src="assets/images/nazzwithcarcropped.png" alt="" srcset="">
+            <img
+              id="bio-img"
+              src="assets/images/nazzwithcarcropped.png"
+              alt=""
+              srcset=""
+            />
             <div id="bio-text-div">
-            <p id="bio-img-text">Nazz's life</p>
-          </div>
+              <p id="bio-img-text">Nazz's life</p>
+            </div>
           </div>
           <div id="bio-info">
             <p id="bio-text-1">
-              Nihar Hodawadekar (born 23 July 1999) also widely known as Nazz is an Indian rapper from the suburbs of Mumbai, Maharashtra called Virar. Nazz started his career in music as a playback singer but with time he discovered Rap and Hip-hop culture and switched to Rap. He is active in the Underground Hip-hop since 2018, he blew up in the mainstream after he participated in the Indian national rap show MTV Hustle 2.0. He creates is music across various sub-genres of Hihop and is a prominent veteran of Mumbai Underground Hip-hop scene.
+              Nihar Hodawadekar (born 23 July 1999) also widely known as Nazz is
+              an Indian rapper from the suburbs of Mumbai, Maharashtra called
+              Virar. Nazz started his career in music as a playback singer but
+              with time he discovered Rap and Hip-hop culture and switched to
+              Rap. He is active in the Underground Hip-hop since 2018, he blew
+              up in the mainstream after he participated in the Indian national
+              rap show MTV Hustle 2.0. He creates is music across various
+              sub-genres of Hihop and is a prominent veteran of Mumbai
+              Underground Hip-hop scene.
             </p>
           </div>
           <div id="read-more-div">
@@ -58,24 +75,45 @@
 
       <div>
         <div id="tweet-wrap">
-          <img id="d2-t-icon" src="assets/images/twitter.png" alt="" srcset="">
+          <img
+            id="d2-t-icon"
+            src="assets/images/twitter.png"
+            alt=""
+            srcset=""
+          />
           <p id="tweet-text">
-              Maine mere ek bhai ko pucha "Bro ye social media pe sablog itne khush kyu hai? <br/>Toh usne bola "Kyuki asli life mein sabke l@ude lage pade hai, par kisi ko dikhana nahi hai"
+            Maine mere ek bhai ko pucha "Bro ye social media pe sablog itne
+            khush kyu hai? <br />Toh usne bola "Kyuki asli life mein sabke l@ude
+            lage pade hai, par kisi ko dikhana nahi hai"
           </p>
-          <a href="https://twitter.com/nazzfuckingbest"><p id="twt-name">@nazzfuckingbest</p></a>
-      </div>
+          <a href="https://twitter.com/nazzfuckingbest"
+            ><p id="twt-name">@nazzfuckingbest</p></a
+          >
+        </div>
 
         <div id="social-wrap">
-            <p>Connect with Nazz</p>
-            <div>
-                <div class="soc-button"><p>Stream on Spotify 📣</p></div>
-                <div class="soc-button"><p>Latest clicks on Instagram 📷</p></div>
-                <div class="soc-button"><p>Thoughts on Twitter 🐤</p></div>
-                <div class="soc-button"><p>Send some Snaps 👻</p></div>
-                <div class="soc-button"><p>Connect on Facebook 🙋‍♂️</p></div>
-            </div>
+          <p>Connect with Nazz</p>
+          <div>
+            <div class="soc-button"><p>Stream on Spotify 📣</p></div>
+            <div class="soc-button"><p>Latest clicks on Instagram 📷</p></div>
+            <div class="soc-button"><p>Thoughts on Twitter 🐤</p></div>
+            <div class="soc-button"><p>Send some Snaps 👻</p></div>
+            <div class="soc-button"><p>Connect on Facebook 🙋‍♂️</p></div>
+          </div>
         </div>
       </div>
+    </div>
+    <div id="div-3">
+      <p>Be an Exclusive Super Fan</p>
+      <form action="https://send.pageclip.co/9Oewb1iL5Luo3xaMMtEFUdb4bxVUqL4c/superfan-form" method="post">
+        <input type="text" name="name" placeholder="Enter your Name" />
+        <input type="text" name="instagram" placeholder="Instagram ID" />
+        <input type="text" name="instagram" placeholder="Telegram ID" />
+        <input type="submit" name="" id="" />
+      </form>
+    </div>
+    <div id="footer">
+      Designed and Developed with ❤ by <span id="yash">Yash Kolambekar 💻</span>
     </div>
   </body>
   <script src="script.js"></script>
