--- a/biography/index.html
+++ b/biography/index.html
@@ -11,9 +11,16 @@
 </head>
 <body>
     <div>
-        <p>
-            Nihar Hodawadekar (born 23 July 1999) also widely known as Nazz is an Indian rapper from the suburbs of Mumbai, Maharashtra called Virar. Nazz started his career in music as a playback singer but with time he discovered Rap and Hip-hop culture and switched to Rap. He is active in the Underground Hip-hop since 2018, he blew up in the mainstream after he participated in the Indian national rap show MTV Hustle 2.0. He creates is music across various sub-genres of Hihop and is a prominent veteran of Mumbai Underground Hip-hop scene.
-        </p>
+        <div class="back-to-main">
+            <p>< Back</p>
+        </div>
+        <div class="space-two"></div>
+        <div class="p-img-div">
+            <img src="assets/images/nazzwiki1.jpg" alt="">
+            <p>
+                Nihar Hodawadekar (born 23 July 1999) also widely known as Nazz is an Indian rapper from the suburbs of Mumbai, Maharashtra called Virar. Nazz started his career in music as a playback singer but with time he discovered Rap and Hip-hop culture and switched to Rap. He is active in the Underground Hip-hop since 2018, he blew up in the mainstream after he participated in the Indian national rap show MTV Hustle 2.0. He creates is music across various sub-genres of Hihop and is a prominent veteran of Mumbai Underground Hip-hop scene.
+            </p>
+        </div>
         <div class="space-one"></div>
         <h3>Childhood</h3>
         <p>Nihar Hodawadekar was born on 23rd July 1999 in Mumbai. He initially was brought up in BIT Chawl, Mazgaon, Mumbai but then later shifted to Virar to live with his uncle's family. His uncle and aunty raised him from thereon. He has had a very tough childhood and has experienced a lot of emotionally disturbing events that shaped him throughout childhood. He has been open about this in his songs but he refuses to address it freely in the interviews. As far as the information stretches, 'his mother left home to never return when he was one year old' he has mentioned in a song named RIP. 'His father was accused of fraud and he died when Nazz was 16 years old' he said in his songs. In his early youth he got into wrong company and he also mentions doing robbery in his own home. Although later on he will decide to improve as Hip-hop enters his life.</p>
@@ -224,6 +231,11 @@
                 </tr>
             </table>
         </div>
+        <div class="space-two"></div>
+        <div class="back-to-main">
+            <p>< Back</p>
+        </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
