--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
     <link rel="stylesheet" href="style-425.css" />
   </head>
   <body>
-    <!-- <header>
-        <p id="header-title">
-           Nazz Fucking Best
-        </p>
-    </header> -->
     <div id="div-1">
       <div id="yt-head">
         <p id="yt-head-1">NEW</p>
@@ -34,7 +29,7 @@
             talks about the side of life he has missed while pursuing his
             musical journey
           </p>
-          <div id="yt-bt-div">
+          <div class="count-btn" id="yt-bt-div">
             <p>Open in Youtube 🔗</p>
           </div>
         </div>
@@ -67,7 +62,7 @@
               Underground Hip-hop scene.
             </p>
           </div>
-          <div id="read-more-div">
+          <div class="count-btn" id="read-more-div">
             <p id="read-more">Read more</p>
           </div>
         </div>
@@ -94,11 +89,11 @@
         <div id="social-wrap">
           <p>Connect with Nazz</p>
           <div>
-            <div class="soc-button"><p>Stream on Spotify 📣</p></div>
-            <div class="soc-button"><p>Latest clicks on Instagram 📷</p></div>
-            <div class="soc-button"><p>Thoughts on Twitter 🐤</p></div>
-            <div class="soc-button"><p>Send some Snaps 👻</p></div>
-            <div class="soc-button"><p>Connect on Facebook 🙋‍♂️</p></div>
+            <div class="count-btn soc-button"><p>Stream on Spotify 📣</p></div>
+            <div class="count-btn soc-button"><p>Latest clicks on Instagram 📷</p></div>
+            <div class="count-btn soc-button"><p>Thoughts on Twitter 🐤</p></div>
+            <div class="count-btn soc-button"><p>Send some Snaps 👻</p></div>
+            <div class="count-btn soc-button"><p>Connect on Facebook 🙋‍♂️</p></div>
           </div>
         </div>
       </div>
@@ -108,12 +103,12 @@
       <form action="https://send.pageclip.co/9Oewb1iL5Luo3xaMMtEFUdb4bxVUqL4c/superfan-form" method="post">
         <input type="text" name="name" placeholder="Enter your Name" />
         <input type="text" name="instagram" placeholder="Instagram ID" />
-        <input type="text" name="instagram" placeholder="Telegram ID" />
+        <input type="text" name="telegram" placeholder="Telegram ID" />
         <input type="submit" name="" id="" />
       </form>
     </div>
     <div id="footer">
-      Designed and Developed with ❤ by <span id="yash">Yash Kolambekar 💻</span>
+      Designed and Developed with ❤ by <span class="count-btn" id="yash">Yash Kolambekar 💻</span>
     </div>
   </body>
   <script src="script.js"></script>
