--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         </div>
       </div>
     </div>
+    <div id="div-3">
+      <p>Be an Exclusive Super Fan</p>
+      <form action="https://io.yash.codes/nazzmusicme/superfanform/" method="post">
+        <input required type="text" name="name" placeholder="Enter your Name" />
+        <input required type="text" name="insta" placeholder="Instagram ID" />
+        <input type="text" name="telegram" placeholder="Telegram ID" />
+        <input type="submit" name="submit" id="" />
+      </form>
+    </div>
     <div id="div-2">
       <div>
         <div id="bio-wrap">
@@ -98,17 +107,12 @@
         </div>
       </div>
     </div>
-    <div id="div-3">
-      <p>Be an Exclusive Super Fan</p>
-      <form action="https://send.pageclip.co/9Oewb1iL5Luo3xaMMtEFUdb4bxVUqL4c/superfan-form" method="post">
-        <input type="text" name="name" placeholder="Enter your Name" />
-        <input type="text" name="instagram" placeholder="Instagram ID" />
-        <input type="text" name="telegram" placeholder="Telegram ID" />
-        <input type="submit" name="" id="" />
-      </form>
-    </div>
     <div id="footer">
       Designed and Developed with ❤ by <span class="count-btn" id="yash">Yash Kolambekar 💻</span>
+    </div>
+    <div id="message">
+      <div class="m-m suc">Submitted Succesfully</div>
+      <div class="m-m fail">Submission Failed</div>
     </div>
   </body>
   <script src="script.js"></script>
