--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <form action="https://io.yash.codes/nazzmusicme/superfanform/" method="post">
         <input required type="text" name="name" placeholder="Enter your Name" />
         <input required type="text" name="insta" placeholder="Instagram ID" />
-        <input type="text" name="telegram" placeholder="Telegram ID" />
+        <input required type="text" name="telegram" placeholder="Telegram ID" />
         <input type="submit" name="submit" id="" />
       </form>
     </div>
