--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
           />
         </div>
         <div id="yt-details-div">
-          <p id="yt-title">Nazz - Majbooriya (Prod. Outfly)</p>
+          <p id="yt-title">NAZZ - GULLY KA SHER (Prod. Kru172)</p>
           <p id="yt-description">
-            Majbooriya by Nazz is a new school emotional hiphop track which
-            talks about the side of life he has missed while pursuing his
-            musical journey
+            Gully Ka Sher by Nazz is the latest gangster banger by Nazz which is also his first Track released from Mass Appeal India
           </p>
           <div class="count-btn" id="yt-bt-div">
             <p>Open in Youtube 🔗</p>
